# arch-utils

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  appBuilder.sh  arch_util_common.cpp  arch_util_common.hpp  backup_btrfs_subvolume  blacklist_driver  blacklist_nouveau  btrfs_api_example.cpp  btrfs_test.cpp  caps_lock_off  caps_lock_off.c  create_btrfs_raid  create_btrfs_snapshot  create_btrfs_subvolume  create_btrfs_subvolume.sh  create_btrfs_volume  create_system_backup  create_tpm  create_virtual_disk  create_wg_key_pair  delete_btrfs_snapshot  delete_btrfs_subvolume  disk_usage_summary  encrypt_device  filesystem.copy  filesystem.cpp  genrand  genrand.cpp  genrand.run  iommu_groups  list_btrfs_subvolumes  mount_btrfs_subvolume  mount_btrfs_volume  popcorn  popcorn.cpp  popcorn.sh  popcorn_add_default_user  (+25 more)
src/common/: CMakeLists.txt  btrfsUtils.cpp  btrfsUtils.hpp  common.hpp  errorHandler.cpp  errorHandler.hpp  filePathDecoder.cpp  filePathDecoder.hpp
systemd-service_files/: jupyter.service  x11vnc.service
systemd_files/: x11vnc.service
systemd_files/network/: 10-example_of_adapter_config.link  10-example_of_virtual_bridge.netdev
